--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,17 @@
     "files.associations": {
         "iostream": "cpp",
         "iosfwd": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "fstream": "cpp",
+        "ostream": "cpp",
+        "new": "cpp",
+        "algorithm": "cpp",
+        "istream": "cpp",
+        "*.tcc": "cpp",
+        "string": "cpp"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
+        "clang-diagnostic-error"
+    ]
 }
